TG-12 ADD missing API methods in swagger.yaml. ADD dummy impl for new API methods.
