# Source/Backend/MiJoService/api/controllers/requests.js
@@ -1,0 +1,11 @@
+'use strict';
+
+var log = require("../../util/log");
+
+module.exports = {
+    getMatchedRequests: getMatchedRequests
+};
+
+function getMatchedRequests(req, res) {
+    log.info("getMatchedRequests");
+}
